Implements screencasting of failed test fixes #322

--- a/plugins/org.jboss.reddeer.junit/about.html
+++ b/plugins/org.jboss.reddeer.junit/about.html
@@ -30,5 +30,15 @@ terms and conditions of the EPL still apply to any source code in the Content
 and such source code may be obtained at
   <A href="http://www.jboss.org/tools">http://www.jboss.org/tools</A>.</P>
 
+<H3>Third party</H3>  
+<P>
+The Content includes Monte Media Library. Use of the Monte Media Library is free for all uses (non-commercial,
+commercial and educational) under the terms of <A href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 (CC BY 3.0)</A>.
+<BR>
+<BR>
+Author of Monte Media library is Werner Randelshofer, Immensee, Switzerland.
+<BR>
+<A href="www.randelshofer.ch">www.randelshofer.ch</A>
+</P>
 </BODY>
 </HTML>
