--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
 
@@ -29,14 +28,17 @@
 
 	<div id="navigation">
 	  <a href="#" onclick="load_home()">Home</a> |
-	  <a href="https://github.com/jboss-reddeer/reddeer/wiki/Installation" target="_blank">Installation</a> |
-	  <a href="https://github.com/jboss-reddeer/reddeer/wiki/User-Guide" target="_blank">User Guide</a>
+	  <a href="#" onclick="load_installation()">Installation</a> |
+	  <a href="https://github.com/jboss-reddeer/reddeer/wiki/User-Guide" target="_blank">User Guide</a> |
+	  <a href="#" onclick="load_change_log()">Change Log</a>
 	</div>
 
     <div id="content-wrapper">
       <div id="inner">   
         <div id="main-content">
-          <object type="text/html" data="home.html" ></object>
+          <script>
+          load_home();
+          </script>
         </div>
       
         <div id="sidebar">
