Basic structure and content of RedDeer page completed

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <script src="javascripts/main.js"></script>
   </head>
     <h1> 
       Say Hello to RedDeer!
@@ -13,13 +14,12 @@
             API for comfortable testing of standard Eclipse components and also allows creating and 
             extending own product API to be used in your specific tests.</p>
 
-    <p>To get started, <a href="https://github.com/jboss-reddeer/reddeer/wiki/Installation">install RedDeer to your Eclipse</a>.
-      Once you have RedDeer installed you can proceed by <a href="https://github.com/jboss-reddeer/reddeer/wiki/Write-and-run-your-first-minimal-functional-test">
-      writing your first minimal test</a> and <a href="https://github.com/jboss-reddeer/reddeer/wiki/Write-you-own-RedDeer-API-for-your-tests">
-      writing your own API</a>. For more information see <a href="https://github.com/jboss-reddeer/reddeer/wiki/User-Guide">User Guide</a>.
+    <p>To get started, <a href="#" onclick="load_page_from_iframe('installation.html')">install RedDeer to your Eclipse</a>.
+      Once you have RedDeer installed you can proceed by <a href="https://github.com/jboss-reddeer/reddeer/wiki/Write-and-run-your-first-minimal-functional-test" target="_blank">
+      writing your first minimal test</a> and <a href="https://github.com/jboss-reddeer/reddeer/wiki/Write-you-own-RedDeer-API-for-your-tests" target="_blank">
+      writing your own API</a>. For more information see <a href="https://github.com/jboss-reddeer/reddeer/wiki/User-Guide" target="_blank">User Guide</a>.
       Latest stable RedDeer is available at:</p>
 
-    <p>
-      <a class="bounced" target="_blank" href="http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.1/">http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.1/</a>
-    </p>
+    <pre><code>http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.1/</code></pre>
+    <br>
 </html>
