--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     </header>
 
 	<div id="navigation">
-	  <a href="#" onclick="load_home()">Home</a> |
-	  <a href="#" onclick="load_installation()">Installation</a> |
+	  <a href="#" onclick="load_page('home.html')">Home</a> |
+	  <a href="#" onclick="load_page('installation.html')">Installation</a> |
 	  <a href="https://github.com/jboss-reddeer/reddeer/wiki/User-Guide" target="_blank">User Guide</a> |
-	  <a href="#" onclick="load_change_log()">Change Log</a>
+	  <a href="#" onclick="load_page('change_log.html')">Change Log</a>
 	</div>
 
     <div id="content-wrapper">
       <div id="inner">   
         <div id="main-content">
           <script>
-          load_home();
+          load_page('home.html');
           </script>
         </div>
       
