Header and navigation are fixed on top

--- a/change_log.html
+++ b/change_log.html
@@ -8,13 +8,11 @@
 
   <body>
     <h1>Release notes</h1>
-    <h2>1.0.0 (2015-12-16)</h2>
-    <pre><code>http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.0/</code></pre>
+    <h2 class="menu_item" id="1.0.0">1.0.0 (2015-12-16)</h2>
     <p>RedDeer 1.0 supports Eclipse Mars (EE). This version brings mainly lots of bug fixes and multiple other enhancements</p>
     <p>About (~60) bugs were fixeed and other issues (~160 in total) resolved 
     <a href="https://github.com/jboss-reddeer/reddeer/issues?q=milestone%3A1.0.0" target="_blank">here</a></p>
-    <h2>0.8.0 (2015-08-06)</h2>
-    <pre><code>http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/0.8.0/</code></pre>
+    <h2 class="menu_item" id="0.8.0">0.8.0 (2015-08-06)</h2>
     <p>RedDeer 0.8 supports Eclipse Mars (EE). This version is mainly about architecture improvements, related re-factoring and lot of bug fixes. In terms of these changes lots of underlying functionality went into o.j.r.common and mainly to o.j.r.core plugin. This helped us to keep architecture cleaner and to avoid cross dependency issues we have faced. Still you can also find multiple API and tooling features and enhancements in this release, for example:</p>
 	<p>You can also find some new features/API like:</p>
 	<ul>
@@ -27,7 +25,7 @@
 	<p>Now when you're creating test plugin you can simply add o.j.r.go dependency and start coding</p>
 	<p>Also many (~70) bug fixes and other issues (~180 in total) resolved 
 	<a href="https://github.com/jboss-reddeer/reddeer/issues?q=milestone%3A0.8.0" target="_blank">here</a></p>
-	<h3>0.7.0 (2015-03-17) - version for Luna</h3>
+	<h2 class="menu_item" id="0.7.0">0.7.0 (2015-03-17) - version for Luna</h2>
 	<ul>
 	  <li>Add isActive method for View<br /></li>
 	  <li>Create WorkbenchHandler (View + Editor handler)</li>
@@ -84,7 +82,7 @@
 	  <li>over 140 issues resolved, see 
 	  <a href="https://github.com/jboss-reddeer/reddeer/issues?q=milestone%3A0.7.0" target="_blank">more</a></li>
 	</ul>
-	<h3>0.6.0 (2014-09-10) - version for Luna</h3>
+	<h2  class="menu_item" id="0.6.0">0.6.0 (2014-09-10) - version for Luna</h2>
 	<ul>
 	  <li>Added filter possibilities to ProblemsView</li>
 	  <li>EJB Wizard support added</li>
@@ -101,7 +99,7 @@
 	  <li>over 200 issues resolved, see 
 	  <a href="https://github.com/jboss-reddeer/reddeer/issues?q=milestone%3A0.6.0" target="_blank">more</a></li>
 	</ul>
-	<h3>0.5.0 (2014-04-07) - version for Luna</h3>
+	<h2 class="menu_item" id="0.5.0">0.5.0 (2014-04-07) - version for Luna</h2>
 	<ul>
 	  <li>Initial version of RedDeer recorder added</li>
 	  <li>Predefined push buttons implementations</li>
@@ -119,7 +117,7 @@
 	  <li>almost 150 bug fixes/improvements available in total, see
 	  <a href="https://github.com/jboss-reddeer/reddeer/issues?labels=&amp;milestone=8&amp;state=closed" target="_blank">more</a></li>
 	</ul>
-	<h3>0.4.0 (2013-10-03)</h3>
+	<h2 class="menu_item" id="0.4.0">0.4.0 (2013-10-03)</h2>
 	<ul>
 	  <li>No SWTBot dependencies in RedDeer</li>
 	  <li>Reference composite API reimplemented</li>
@@ -134,20 +132,20 @@
 	  <li>more than 100 bug fixes/improvements available, see
 	  <a href="https://github.com/jboss-reddeer/reddeer/issues?labels=&amp;milestone=5&amp;page=1&amp;state=closed" target="_blank">more</a></li>
 	</ul>
-	<h3>0.3.1 (Service version for Kepler, 2013-05-07 )</h3>
+	<h2 class="menu_item" id="0.3.1">0.3.1 (Service version for Kepler, 2013-05-07 )</h2>
 	<ul>
 	  <li>Unable to locate LabeledText when an icon is present bug</li>
 	  <li>Set focus to view when instantiated if it's open enhancement</li>
 	  <li>Opening preference dialog takes more time than expected bug</li>
 	  <li>Implicit focus is set and error logged when no control in opened view has a focus enhancement blocker</li>
 	</ul>
-	<h3>0.3 (2013-05-07) - version for Kepler</h3>
+	<h2 class="menu_item" id="0.3.0">0.3.0 (2013-05-07) - version for Kepler</h2>
 	<ul>
 	  <li>Migration to Kepler</li>
 	  <li>Remove SWTBot Dependency from Views enhancement</li>
 	  <li>Improved logging without multiple log4jxml and ability to enable debug messages added enhancement</li>
 	</ul>
-	<h3>0.2 (2013-05-07) - version for Juno</h3>
+	<h2 class="menu_item" id="0.2.0">0.2.0 (2013-05-07) - version for Juno</h2>
 	<ul>
 	  <li>Added support for composite widget approach</li>
 	  <li>Create new plugin with basic requirements (clean workspace, open perspective, ...)</li>
@@ -175,7 +173,7 @@
 	</ul>
 	<p>For complete list of resolved issues click 
 	<a href="https://github.com/jboss-reddeer/reddeer/issues?labels=&amp;milestone=4&amp;page=1&amp;state=closed" target="_blank">here</a></p>
-	<h3>0.1 (2012-12-03)</h3>
+	<h2 class="menu_item" id="0.1.0">0.1.0 (2012-12-03)</h2>
 	<ul>
 	  <li>Command menus support added</li>
 	  <li>Table implementation added</li>
@@ -186,13 +184,13 @@
 	  <li>Target platform changed to 4.2.1</li>
 	  <li>Many others</li>
 	</ul>
-	<h3>0.0.2 (2012-10-04)</h3>
+	<h2 class="menu_item" id="0.0.2">0.0.2 (2012-10-04)</h2>
 	<ul>
 	  <li>ImportWizardDialog implemented</li>
 	  <li>ConsoleView implemented</li>
 	  <li>ErrorLog implemented</li>
 	</ul>
-	<h3>0.0.1 (2012-09-27)</h3>
+	<h2 class="menu_item" id="0.0.1">0.0.1 (2012-09-27)</h2>
 	<ul>
 	  <li>Initial wait conditions added</li>
 	  <li>Initial JUnit layer with XML configuration added</li>
