--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <script src="javascripts/main.js"></script>
   </head>
+  <body>
     <h1> 
       Say Hello to RedDeer!
     </h1>
@@ -14,7 +15,7 @@
             API for comfortable testing of standard Eclipse components and also allows creating and 
             extending own product API to be used in your specific tests.</p>
 
-    <p>To get started, <a href="#" onclick="load_page_from_iframe('installation.html')">install RedDeer to your Eclipse</a>.
+    <p>To get started, <a href="#" onclick="loadPageFromIframe('installation.html')">install RedDeer to your Eclipse</a>.
       Once you have RedDeer installed you can proceed by <a href="https://github.com/jboss-reddeer/reddeer/wiki/Write-and-run-your-first-minimal-functional-test" target="_blank">
       writing your first minimal test</a> and <a href="https://github.com/jboss-reddeer/reddeer/wiki/Write-you-own-RedDeer-API-for-your-tests" target="_blank">
       writing your own API</a>. For more information see <a href="https://github.com/jboss-reddeer/reddeer/wiki/User-Guide" target="_blank">User Guide</a>.
@@ -22,4 +23,5 @@
 
     <pre><code>http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.1/</code></pre>
     <br>
+  </body>
 </html>
