--- a/installation.html
+++ b/installation.html
@@ -9,14 +9,14 @@
  <body>
  
  <body>
-   <h2>Using Red Deer in a Maven Project in Eclipse</h2>
+   <h2 class="menu_item" id="RedDeer Installation">Using Red Deer in a Maven Project in Eclipse</h2>
    <p>In you Eclipse based IDE you can install RedDeer from one of these p2 update sites (Help-&gt;Install New Software):</p>
    <p>For for latest stable version (1.0.1) - for Mars</p>
    <pre><code>http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.1/</code></pre>
    <p>For latest nightly development version built from master (1.1.0-SNAPSHOT) - for Neon</p>
    <pre><code>http://download.jboss.org/jbosstools/neon/snapshots/builds/reddeer_master/</code></pre>
    
-   <h2>Older versions</h2>
+   <h2 class="menu_item" id="Previous releases">Older versions</h2>
    <p>For for stable version 0.8.0 - for Luna</p>
    <pre><code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.8.0/</code></pre>
    <p>For for stable version 0.7.0 - for Luna</p>
