--- a/installation.html
+++ b/installation.html
@@ -1,37 +1,41 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-  </head>
+<head>
+<meta charset='utf-8'>
+<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
+</head>
 
- <body>
- 
- <body>
-   <h2 class="menu_item" id="RedDeer Installation">Using Red Deer in a Maven Project in Eclipse</h2>
-   <p>In you Eclipse based IDE you can install RedDeer from one of these p2 update sites (Help-&gt;Install New Software):</p>
-   <p>For for latest stable version (1.0.1) - for Mars</p>
-   <pre><code>http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.1/</code></pre>
-   <p>For latest nightly development version built from master (1.1.0-SNAPSHOT) - for Neon</p>
-   <pre><code>http://download.jboss.org/jbosstools/neon/snapshots/builds/reddeer_master/</code></pre>
-   
-   <h2 class="menu_item" id="Previous releases">Older versions</h2>
-   <p>For for stable version 0.8.0 - for Luna</p>
-   <pre><code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.8.0/</code></pre>
-   <p>For for stable version 0.7.0 - for Luna</p>
-   <pre><code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.7.0/</code></pre>
-   <p>For for stable version 0.6.0 - for Luna</p>
-   <pre><code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.6.0/</code></pre>
-   <p>For for stable version 0.5.0 - for Luna</p>
-   <pre><code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.5.0/</code></pre>
-   <p>For for stable version 0.4.0 - for Kepler</p>
-   <pre><code>http://download.jboss.org/jbosstools/updates/stable/kepler/core/reddeer/0.4.0/</code></pre>
-   <p>For for stable version 0.2.0 - for Juno</p>
-   <pre><code>http://download.jboss.org/jbosstools/updates/stable/juno/core/reddeer/0.2.0/</code></pre>
-   <p>Then, in your project's MANIFEST.MF file, add Red Deer to the list of required bundles for example:</p>
-   <pre><code>Require-Bundle: org.jboss.reddeer.swt</code></pre>
-   <p>Use &quot;reddeer&quot; filter to see what RedDeer plugins you can use in your tests.</p>
-   <br><br><br>
- </body>
+<body>
+<body>
+	<h2 class="menu-item" id="RedDeer Installation">Using Red Deer in
+		a Maven Project in Eclipse</h2>
+	<p>In you Eclipse based IDE you can install RedDeer from one of
+		these p2 update sites (Help-&gt;Install New Software):</p>
+	<p>For for latest stable version (1.0.1) - for Mars</p>
+	<code>http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.1/</code>
+	<p>For latest nightly development version built from master
+		(1.1.0-SNAPSHOT) - for Neon</p>
+	<code>http://download.jboss.org/jbosstools/neon/snapshots/builds/reddeer_master/</code>
+
+	<h2 class="menu-item" id="Previous releases">Older versions</h2>
+	<p>For for stable version 0.8.0 - for Luna</p>
+	<code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.8.0/</code>
+	<p>For for stable version 0.7.0 - for Luna</p>
+	<code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.7.0/</code>
+	<p>For for stable version 0.6.0 - for Luna</p>
+	<code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.6.0/</code>
+	<p>For for stable version 0.5.0 - for Luna</p>
+	<code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.5.0/</code>
+	<p>For for stable version 0.4.0 - for Kepler</p>
+	<code>http://download.jboss.org/jbosstools/updates/stable/kepler/core/reddeer/0.4.0/</code>
+	<p>For for stable version 0.2.0 - for Juno</p>
+	<code>http://download.jboss.org/jbosstools/updates/stable/juno/core/reddeer/0.2.0/</code>
+	<p>Then, in your project's MANIFEST.MF file, add Red Deer to the
+		list of required bundles for example:</p>
+	<code>Require-Bundle: org.jboss.reddeer.swt</code>
+	<p>Use &quot;reddeer&quot; filter to see what RedDeer plugins you
+		can use in your tests.</p>
+	<br>
+	<br>
+</body>
 </html>
