--- a/change_log.html
+++ b/change_log.html
@@ -10,11 +10,31 @@
 
 <body>
 	<h1>Release notes</h1>
+	
+	<h2 class="menu-item" id="1.1.0">1.1.0 (2016-08-18)</h2>
+	<p>RedDeer 1.1.0 supports Eclipse Neon (EE). This release contains 
+	mostly bug fixes and few enhancements. New and noteworthy features:</p>
+	<ul>
+		<li>Extension to check whether an issue causing test failure has been fixed</li>
+		<li>Capability to kill a specific job</li>
+		<li>Implemented Import Maven Project wizard</li>
+		<li>Implemented HTML wizard</li>
+		<li>Managing archetype catalogs</li>
+		<li>New ShellIsAvailable wait condition</li>
+		<li>Many enhancements in TextEditor</li>
+		<li>Problems view enhancements</li>
+	</ul>
+	<p>Around 70 issues in total were resolved in this version. For complete reference see resolved
+		<a href="https://github.com/jboss-reddeer/reddeer/pulls?q=is%3Apr+is%3Aclosed+milestone%3A1.1.0"
+		target="_blank">pull requests</a> and resolved  
+		<a href="https://github.com/jboss-reddeer/reddeer/issues?q=is%3Aissue+is%3Aclosed+milestone%3A1.1.0"
+		target="_blank">issues</a>.</p>
+	
 	<h2 class="menu-item" id="1.0.0">1.0.0 (2015-12-16)</h2>
 	<p>RedDeer 1.0 supports Eclipse Mars (EE). This version brings
 		mainly lots of bug fixes and multiple other enhancements</p>
 	<p>
-		About (~60) bugs were fixeed and other issues (~160 in total) resolved
+		About (~60) bugs were fixed and other issues (~160 in total) resolved
 		<a
 			href="https://github.com/jboss-reddeer/reddeer/issues?q=milestone%3A1.0.0"
 			target="_blank">here</a>
