--- a/installation.html
+++ b/installation.html
@@ -11,13 +11,15 @@
 		a Maven Project in Eclipse</h2>
 	<p>In you Eclipse based IDE you can install RedDeer from one of
 		these p2 update sites (Help-&gt;Install New Software):</p>
-	<p>For for latest stable version (1.0.1) - for Mars</p>
-	<code>http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.1/</code>
+	<p>For for latest stable version (1.1.0) - for Neon</p>
+	<code>http://download.jboss.org/jbosstools/neon/stable/updates/reddeer/1.1.0/</code>
 	<p>For latest nightly development version built from master
-		(1.1.0-SNAPSHOT) - for Neon</p>
+		(1.2.0-SNAPSHOT) - for Neon</p>
 	<code>http://download.jboss.org/jbosstools/neon/snapshots/builds/reddeer_master/</code>
 
 	<h2 class="menu-item" id="Previous releases">Older versions</h2>
+	<p>For for stable version 1.0.1 - for Mars</p>
+	<code> http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.1/</code>
 	<p>For for stable version 0.8.0 - for Luna</p>
 	<code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.8.0/</code>
 	<p>For for stable version 0.7.0 - for Luna</p>
