Fixed typos in installation page

--- a/installation.html
+++ b/installation.html
@@ -18,19 +18,19 @@
 	<code>http://download.jboss.org/jbosstools/neon/snapshots/builds/reddeer_master/</code>
 
 	<h2 class="menu-item" id="Previous releases">Older versions</h2>
-	<p>For for stable version 1.0.1 - for Mars</p>
+	<p>For stable version 1.0.1 - for Mars</p>
 	<code> http://download.jboss.org/jbosstools/updates/stable/mars/core/reddeer/1.0.2/</code>
-	<p>For for stable version 0.8.0 - for Luna</p>
+	<p>For stable version 0.8.0 - for Luna</p>
 	<code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.8.0/</code>
-	<p>For for stable version 0.7.0 - for Luna</p>
+	<p>For stable version 0.7.0 - for Luna</p>
 	<code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.7.0/</code>
-	<p>For for stable version 0.6.0 - for Luna</p>
+	<p>For stable version 0.6.0 - for Luna</p>
 	<code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.6.0/</code>
-	<p>For for stable version 0.5.0 - for Luna</p>
+	<p>For stable version 0.5.0 - for Luna</p>
 	<code>http://download.jboss.org/jbosstools/updates/stable/luna/core/reddeer/0.5.0/</code>
-	<p>For for stable version 0.4.0 - for Kepler</p>
+	<p>For stable version 0.4.0 - for Kepler</p>
 	<code>http://download.jboss.org/jbosstools/updates/stable/kepler/core/reddeer/0.4.0/</code>
-	<p>For for stable version 0.2.0 - for Juno</p>
+	<p>For stable version 0.2.0 - for Juno</p>
 	<code>http://download.jboss.org/jbosstools/updates/stable/juno/core/reddeer/0.2.0/</code>
 	<p>Then, in your project's MANIFEST.MF file, add Red Deer to the
 		list of required bundles for example:</p>
