Added sharp navigation

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 	</div>
 
 	<div id="navigation">
-		<a href="#" onclick="loadPage('home.html')">Home</a> | <a href="#"
+		<a href="#home" onclick="loadPage('home.html')">Home</a> | <a href="#installation"
 			onclick="loadPage('installation.html')">Installation</a> | <a
 			href="https://github.com/jboss-reddeer/reddeer/wiki/User-Guide"
-			target="_blank">User Guide</a> | <a href="#"
+			target="_blank">User Guide</a> | <a href="#change_log"
 			onclick="loadPage('change_log.html')">Change Log</a>
 	</div>
 
@@ -48,7 +48,7 @@
 		<div class="inner">
 			<div id="main-content">
 				<script>
-					loadPage('home.html');
+					initPage();
 				</script>
 			</div>
 
