Added side menu and anchors

--- a/installation.html
+++ b/installation.html
@@ -6,9 +6,7 @@
 </head>
 
 <body>
-<body>
-	<h2 class="menu-item" id="RedDeer Installation">Using Red Deer in
-		a Maven Project in Eclipse</h2>
+	<h2 class="menu-item" id="RedDeer Installation">Using Red Deer in a Maven Project in Eclipse</h2>
 	<p>In you Eclipse based IDE you can install RedDeer from one of
 		these p2 update sites (Help-&gt;Install New Software):</p>
 	<p>For for latest stable version (1.1.0) - for Neon</p>
