Updated change log
1.2.0 included

--- a/change_log.html
+++ b/change_log.html
@@ -9,8 +9,24 @@
 </head>
 
 <body>
-	<h1>Release notes</h1>
+	<h1>Change log</h1>
 	
+	<h2 class="menu-item" id="1.2.0">1.2.0 (2016-11-02)</h2>
+	<p>RedDeer 1.2.0 supports Eclipse Neon (EE). This release contains
+	mostly bug fixes and few enhancements. New and noteworthy features:</p>
+	<ul>
+		<li>RedDeer log collector</li>
+		<li>Support for prioritized extensions</li>
+		<li>TreeViewerHandler improved to get more items with same text</li>
+		<li>Wait condition TextEditorContainsText</li>
+		<li>Changed visibility from internal to public of Server wait conditions</li>
+	</ul>
+	<p>Around 37 issues in total were resolved in this version. For complete reference see resolved
+		<a href="https://github.com/jboss-reddeer/reddeer/pulls?q=is%3Apr+milestone%3A1.2.0+is%3Aclosed"
+		   target="_blank">pull requests</a> and resolved
+		<a href="https://github.com/jboss-reddeer/reddeer/issues?q=is%3Aissue+milestone%3A1.2.0+is%3Aclosed"
+		   target="_blank">issues</a>.</p>
+		
 	<h2 class="menu-item" id="1.1.0">1.1.0 (2016-08-18)</h2>
 	<p>RedDeer 1.1.0 supports Eclipse Neon (EE). This release contains 
 	mostly bug fixes and few enhancements. New and noteworthy features:</p>
