Updated change log
- included version 1.2.1

--- a/change_log.html
+++ b/change_log.html
@@ -11,6 +11,9 @@
 <body>
 	<h1>Change log</h1>
 	
+	<h2 class="menu-item" id="1.2.1">1.2.1 (2016-11-09)</h2>
+	<p>Micro release of RedDeer. Removed checkstyle</p>
+	
 	<h2 class="menu-item" id="1.2.0">1.2.0 (2016-11-02)</h2>
 	<p>RedDeer 1.2.0 supports Eclipse Neon (EE). This release contains
 	mostly bug fixes and few enhancements. New and noteworthy features:</p>
